first presentable website done

--- a/index.html
+++ b/index.html
@@ -5,12 +5,132 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>InnoSpace Coming Soon</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"> 
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Chivo:300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
+    <link href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="heading">Coming Soon</h1>  
+        <header class=header >
+            <div class="navigation">
+                <div class="navigation-container">
+                    <h1 class="navigation-brand"><img class="navigation-icon" src="./images/innospace_logo_greenwhite_notext.svg" alt="Innospace"></h1>
+                    <div class="navigation-menu">
+                        <ul class="navigation-list">
+                            <li class="navigation-item"><a href="#" class="navigation-link">Home</a></li>
+                            <li class="navigation-item"><a href="#" class="navigation-link">About</a></li>
+                            <li class="navigation-item"><a href="#" class="navigation-link">Community</a></li>
+                            <li class="navigation-item"><a href="#" class="navigation-link">Spaces</a></li>
+                            <li class="navigation-item"><a href="#" class="navigation-link">Membership</a></li>
+                            <li class="navigation-item"><a href="#" class="navigation-link">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="header-content">
+                <h1 class="header-text-main">Creative Spaces for creative thinkers</h1>
+                <p class="header-text-sub">Perfect Workspace for entrepreneurs and creatives</p> 
+            </div>
+        </header>
+        <section class="services section-container">
+            <h1 class="section-heading">Services We Provide</h1>
+            <div class="service-cards">
+                <div class="service-card">
+                    <img class="service-card-icon" src="images/icons/account-100.png" alt="">
+                    <h3 class="service-card-heading">Incubation programs</h3>
+                    <p class="service-card-subtext"></p>
+                </div>
+                <div class="service-card">
+                    <img class="service-card-icon" src="images/icons/training-100.png" alt="">
+                    <h3 class="service-card-heading">Training programs</h3>
+                    <p class="service-card-subtext"></p>
+                </div>
+                <div class="service-card">
+                    <img class="service-card-icon" src="images/icons/service-100.png" alt="">
+                    <h3 class="service-card-heading">Support services</h3>
+                    <p class="service-card-subtext"></p>
+                </div>
+            </div>
+        </section>
+        <section class="spaces">
+            <div class="section-container">
+                <h1 class="section-heading">Spaces for Everyone</h1>
+                <div class="space-cards">
+                    <div class="space-card">
+                        <div class="space-card-image private"></div>
+                        <div class="space-card-content">
+                            <h3 class="space-card-heading">Private Offices</h3>
+                            <p class="space-card-subtext">Personalised space for your basic office needs</p>
+                            <a href="" class="space-card-link">Book a Private Office</a>
+                        </div>
+                    </div>
+                    <div class="space-card">
+                        <div class="space-card-image open"></div>
+                        <div class="space-card-content">
+                            <h3 class="space-card-heading">Shared Workspace</h3>
+                            <p class="space-card-subtext">Desk membership with access to premium amenities and conference rooms.</p>
+                            <a href="" class="space-card-link">View Desk Memberships</a>
+                        </div>
+                    </div>
+                    <div class="space-card">
+                        <div class="space-card-image event"></div>
+                        <div class="space-card-content">
+                            <h3 class="space-card-heading">Event Space</h3>
+                            <p class="space-card-subtext">On demand space for your workshop or presentation.</p>
+                            <a href="" class="space-card-link">Host an Event</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="contacts section-container">
+            <h3 class="section-heading">How to Reach Us</h3>
+            <div class="contact-cards">
+                <div class="contact-card">
+                    <img src="images/icons/office-phone-100.png" alt="Phone" class="contact-icon">
+                    <ul class="contact-list">
+                        <li class="contact-item"><a class="contact-number" href="tel:0303209021">0303209021</a></li>
+                        <li class="contact-item"><a class="contact-number" href="tel:0202130541">0202130541</a></li>
+                        <li class="contact-item"><a class="contact-number" href="tel:0559453622">0559453622</a></li>
+                    </ul>
+                </div>
+                <div class="contact-card">
+                    <img src="images/icons/envelope-100.png" alt="Email" class="contact-icon">
+                    <ul class="contact-list">
+                        <li class="contact-item">info@innospacegh.com</li>
+                    </ul>
+                </div>
+                <div class="contact-card">
+                    <img src="images/icons/address-location-100.png" alt="Address" class="contact-icon">
+                    <ul class="contact-list">
+                        <li class="contact-item">P.O.Box CS 8806, Tema</li>
+                        <li class="contact-item">Meridian Heights, Plot No. TC/MKT/A/108, Community 1, Tema</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section class="map-section">
+                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15882.117163997744!2d-0.0036626!3d5.6362647!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6fe8c733ca282936!2sMeridian+Heights!5e0!3m2!1sen!2sgh!4v1556141356313!5m2!1sen!2sgh" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>            
+        </section>
+        <footer class="footer">
+            <div class="footer-container">
+                <img class="navigation-icon footer-brand" src="images/innospace_logo_greenwhite_notext.svg" alt="Inno space">
+                <div class="footer-social">
+                    <a href="" class="footer-social-link"><i class="icon ion-logo-facebook"></i></a>
+                    <a href="twitter.com/innospace2" class="footer-social-link"><i class="icon ion-logo-twitter"></i></a>
+                    <a href="instagram.com/innospacelimited" class="footer-social-link"><i class="icon ion-logo-instagram"></i></a>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
