--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>InnoSpace Coming Soon</title>
+    <title>InnoSpace Tema</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -38,7 +38,7 @@
             </div>
             <div class="header-content">
                 <h1 class="header-text-main">Creative Spaces for creative thinkers</h1>
-                <p class="header-text-sub">Perfect Workspace for entrepreneurs and creatives</p> 
+                <p class="header-text-sub">Perfect Workspace for entrepreneurs and creatives in Tema and its environs</p> 
             </div>
         </header>
         <section class="services section-container">
