Removed links from space cards and added mailto to email

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <div class="space-card-content">
                             <h3 class="space-card-heading">Private Offices</h3>
                             <p class="space-card-subtext">Personalised space for your basic office needs</p>
-                            <a href="" class="space-card-link">Book a Private Office</a>
+                            <!-- <a href="" class="space-card-link">Book a Private Office</a> -->
                         </div>
                     </div>
                     <div class="space-card">
@@ -78,7 +78,7 @@
                         <div class="space-card-content">
                             <h3 class="space-card-heading">Shared Workspace</h3>
                             <p class="space-card-subtext">Desk membership with access to premium amenities and conference rooms.</p>
-                            <a href="" class="space-card-link">View Desk Memberships</a>
+                            <!-- <a href="" class="space-card-link">View Desk Memberships</a> -->
                         </div>
                     </div>
                     <div class="space-card">
@@ -86,7 +86,7 @@
                         <div class="space-card-content">
                             <h3 class="space-card-heading">Event Space</h3>
                             <p class="space-card-subtext">On demand space for your workshop or presentation.</p>
-                            <a href="" class="space-card-link">Host an Event</a>
+                            <!-- <a href="" class="space-card-link">Host an Event</a> -->
                         </div>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
                 <div class="contact-card">
                     <img src="images/icons/envelope-100.png" alt="Email" class="contact-icon">
                     <ul class="contact-list">
-                        <li class="contact-item">info@innospacegh.com</li>
+                        <li class="contact-item"><a href="mailto:info@innospacegh.com" class="contact-number">info@innospacegh.com</a></li>
                     </ul>
                 </div>
                 <div class="contact-card">
