--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
             <div class="footer-container">
                 <img class="navigation-icon footer-brand" src="images/innospace_logo_greenwhite_notext.svg" alt="Inno space">
                 <div class="footer-social">
-                    <a href="https://facebook.com/innospacegh" class="footer-social-link"><i class="icon ion-logo-facebook"></i></a>
-                    <a href="https://twitter.com/innospace2" class="footer-social-link"><i class="icon ion-logo-twitter"></i></a>
-                    <a href="https://instagram.com/innospacelimited" class="footer-social-link"><i class="icon ion-logo-instagram"></i></a>
+                    <a href="https://facebook.com/innospacegh" target="_blank" class="footer-social-link"><i class="icon ion-logo-facebook"></i></a>
+                    <a href="https://twitter.com/innospace2" target="_blank" class="footer-social-link"><i class="icon ion-logo-twitter"></i></a>
+                    <a href="https://instagram.com/innospacelimited" target="_blank" class="footer-social-link"><i class="icon ion-logo-instagram"></i></a>
                 </div>
             </div>
         </footer>
