--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
                 <p class="header-text-sub">Perfect Workspace for entrepreneurs and creatives in Tema and its environs</p> 
             </div>
         </header>
+        <section class="about">
+            <div class="section-container">
+                <div class="about-image"></div>
+                <div class="about-content">
+                    <h1 class="section-heading">About Us</h1>
+                    <p class="about-text">InnoSpace is a newly established hub in the Tema Municipality offering shared office spaces, private office spaces, events / board /training spaces to start-ups, freelancers, entrepreneurs and any individual who needs an office space with basic office setup to run their business. We are equipped with Fibre optic internet, copy center and tea/coffee corner and financial partners.</p>
+                    <p class="about-text"> We also offer training programs spanning I.T related courses, Monitoring and Evaluation of Development Interventions, Grant writing, Result Based Management, Strategic Planning, Theory of Change processes, Logical Framework processes, Business modeling and Enterprise Incubation programs.</p>
+                </div>
+            </div>
+        </section>
         <section class="services section-container">
             <h1 class="section-heading">Services We Provide</h1>
             <div class="service-cards">
