--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>InnoSpace Tema</title>
+    <meta name="Description" content="InnoSpace is co-working space and tech hub in Tema, Ghana with incubation programs and support services for startups">
+    <meta name="Author" content="InnoSpace Tema">
+    <title>InnoSpace Tema | Co-working space and Tech hub</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -139,7 +141,7 @@
             </div>
         </section>
         <section class="map-section">
-                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15882.117163997744!2d-0.0036626!3d5.6362647!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6fe8c733ca282936!2sMeridian+Heights!5e0!3m2!1sen!2sgh!4v1556141356313!5m2!1sen!2sgh" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>            
+                <iframe title="Map to location" class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15882.117163997744!2d-0.0036626!3d5.6362647!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6fe8c733ca282936!2sMeridian+Heights!5e0!3m2!1sen!2sgh!4v1556141356313!5m2!1sen!2sgh" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>            
         </section>
         <footer class="footer">
             <div class="footer-container">
