--- a/index.html
+++ b/index.html
@@ -12,11 +12,20 @@
     </script>
 
     <meta charset="UTF-8">
+    <title>InnoSpace Tema | Co-working space and Tech hub</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description" content="InnoSpace is co-working space and tech hub in Tema, Ghana with incubation programs and support services for startups">
     <meta name="Author" content="InnoSpace Tema">
-    <title>InnoSpace Tema | Co-working space and Tech hub</title>
+
+    <meta property="og:title" content="InnoSpace: The premier Co-working space and Tech Hub in Tema" />
+    <meta property="og:description" content="InnoSpace is co-working space and tech hub in Tema, Ghana with incubation programs and support services for startups" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://innospacegh.com/" />
+    <meta property="og:image" content="images/innospace_logo-whitebg.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@innospacegh" />
+    
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -24,10 +33,15 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Chivo:300" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
-    <link href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css" rel="stylesheet">
+
+    <script type="module" src="https://unpkg.com/ionicons@4.5.10-1/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule="" src="https://unpkg.com/ionicons@4.5.10-1/dist/ionicons/ionicons.js"></script>
+
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Chivo:300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
+
+    <!-- <link href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -147,12 +161,13 @@
             <div class="footer-container">
                 <img class="navigation-icon footer-brand" src="images/innospace_logo_greenwhite_notext.svg" alt="Inno space">
                 <div class="footer-social">
-                    <a href="https://facebook.com/innospacegh" target="_blank" class="footer-social-link"><i class="icon ion-logo-facebook"></i></a>
-                    <a href="https://twitter.com/innospace2" target="_blank" class="footer-social-link"><i class="icon ion-logo-twitter"></i></a>
-                    <a href="https://instagram.com/innospacelimited" target="_blank" class="footer-social-link"><i class="icon ion-logo-instagram"></i></a>
+                    <a href="https://facebook.com/innospacegh" aria-label="Visit our Facebook page" target="_blank" rel="noopener" class="footer-social-link"><ion-icon name="logo-facebook"></ion-icon></a>
+                    <a href="https://twitter.com/innospacegh" aria-label="Visit our Twitter page" target="_blank" rel="noopener" class="footer-social-link"><ion-icon name="logo-twitter"></ion-icon></a>
+                    <a href="https://instagram.com/innospacelimited" aria-label="Visit our Instagram page" target="_blank" rel="noopener" class="footer-social-link"><ion-icon name="logo-instagram"></ion-icon></a>
                 </div>
             </div>
         </footer>
     </div>
+<!-- <script src="https://unpkg.com/ionicons@4.5.10-1/dist/ionicons.js"></script> -->
 </body>
 </html>
